# standard-i18n-tasks

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  TODO.org  common.mk  en.pot  gettextize.mk  ja.po  patch.diff  pyproject.toml
