[tool.poetry]
name = "standard-i18n-wrapper"
version = "0.1.0"
description = ""
authors = ["gemmaro <gemmaro.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mistletoe = "^1.1.0"

[tool.poetry.group.dev.dependencies]
translate-toolkit = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
